--- a/pod.yaml
+++ b/pod.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: nginx
+  name: nginx #pod-name
 spec:
   containers:
-    - name: nginx
-      image: nginx
+    - name: nginx #container-name
+      image: nginx:1.14.2 #container-image
       ports:
         - containerPort: 80
