--- a/pod-with-probe.yaml
+++ b/pod-with-probe.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: nginx-with-probe
-  label:
+  labels:
     app: nginx
   annotations:
     description: belajar probe
@@ -21,9 +21,9 @@ spec:
         timeoutSeconds: 1 #waktu timeout ketika pengecekan gagal, default 1
         successThreshold: 1 #minimum dianggap sukses setelah terjadi failure, default 1
         failureThreshold: 3 #minimum dianggap failure ketika terjadi gagal, default 3
-      redinessProbe: #pengecekan jika pod siap menerima traffic jika ada traffic yang timeout maka pod tersebut di stop untuk penerimaan traffic sampai traffic tersebut berhenti timeout
+      readinessProbe: #pengecekan jika pod siap menerima traffic jika ada traffic yang timeout maka pod tersebut di stop untuk penerimaan traffic sampai traffic tersebut berhenti timeout
         httpGet:
-          path: /
+          path: /health
           port: 80
         initialDelaySeconds: 0
         periodSeconds: 10
@@ -32,7 +32,7 @@ spec:
         failureThreshold: 3
       startupProbe: #pengecekan apakah pod sudah berjalan, jika belum berjalan maka kubelet tidak akan melakukan pengecekan liveness dan rideness
         httpGet:
-          path: /
+          path: /health
           port: 80
         initialDelaySeconds: 0
         periodSeconds: 10
