--- a/replication-controller.yaml
+++ b/replication-controller.yaml
@@ -5,7 +5,7 @@ apiVersion: v1
 kind: ReplicationController
 metadata:
   name: nginx-rc
-  label:
+  labels:
     test: rc
   annotations:
     description: belajar replication controller
@@ -24,9 +24,9 @@ spec:
           image: nginx:1.14.2
           ports:
             - containerPort: 80
-          redinessProbe:
+          readinessProbe:
             httpGet:
-              path: /health
+              path: /
               port: 80
             initialDelaySeconds: 0
             periodSeconds: 10
