--- a/job.yaml
+++ b/job.yaml
@@ -3,20 +3,20 @@ kind: Job
 metadata:
   name: job
   labels:
-    run: job
+    test: job-nodejs
   annotations:
     description: belajar jobs
 spec:
-  completions: 5 #berapa kali job ingin dijalankan, default 1
+  completions: 6 #berapa kali job ingin dijalankan, default 1
   parallelism: 2 #jumlah job yang dijalankan dalm bentuk pod, default 1
-  selector:
-    matchLabels:
-      run: job
+  #selector:
+    #matchLabels:
+    #  run: job
   template:
     metadata:
       name: job
-      labels:
-        run: job
+      #labels:
+      #run: job
     spec:
       restartPolicy: Never #wajib hukumnya jika di job
       containers:
